public/css/application.css
.container {
  margin: 20px auto;
  max-width: 660px;
  padding: 30px;
  padding-top: 0;
  border: 4px dotted teal;
  border-radius: 0px 40px;
}

.brand {
  display: inline;
  position: relative;
  margin-left: 10px;
}

.icon {
  margin-left: 10px;
  width: 42px;
  height: 42px;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.form {
  display: block;
  position: relative;
  margin-top: 10px;
  text-align: center;
}

body {
  min-width: 800px;
  color: #2C2C2C;
  background-color: #CBDFD6;
}

header {
  display: inline-block;
  width: 100%;
  height: 60px;
  background-color: #5C4639;
}

nav {
  display: inline-block;
  float: right;
  position: relative;
}


form {
  display: inline-block;
}

footer{

}

table {
  margin-left: auto;
  margin-right: auto;
}

table tr td:first-child label {
  position: relative;
  margin-right: 6px;
  top: -8px;
  float: right;
}

ul li {
  margin: 2px;
}

input {
  padding: 2px;
  border-radius: 2px;
}

button, input[type="submit"] {
  margin-top: 20px;
  color: #2C2C2C;
  background-color: #DC7143;
}

input[type="radio"] {
  margin-left: 6px;
  margin-right: 6px;
}

input[name="choice[name]"] {
  width: 276px;
  margin-left: 24px;
}

input[name="question[prompt]"] {
  width: 300px;
  margin-top: 42px;
}

a, a:link, a:visited {
  color: #DC7143;
  text-decoration: none;
}

a:hover {
  color: #FDA179;
  text-decoration: none;
}

header a:hover {
  text-shadow: 2px 2px 2px #2C2C2C;
}

header span {
  color: #CFAA99;
  margin-right: 12px;
}

.user-signin{
  color: #FDA179;
}

.question {
  margin-bottom: 0;
}

.choice {
  display: block;
}

